--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint --ignore-path .gitignore --ext .js .",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
     "format": "npm run prettier -- --write",
-    "validate": "npm run format && npm run lint && npm run build"
+    "validate": "npm run format && npm run lint"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "eslint": "7.18.0",
-    "husky": "^4.3.8",
+    "husky": "4.3.8",
     "prettier": "2.2.1"
   }
 }
