--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
     "cra-template-redux": "1.0.2",
+    "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
