--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "styled-components": "5.2.1"
   },
   "scripts": {
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "next dev",
     "build": "next build",
@@ -40,8 +40,11 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-styled-components": "1.12.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
     "eslint": "7.18.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "react-test-renderer": "17.0.1"
   }
 }
