--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
+    "axios": "0.21.1",
     "cra-template-redux": "1.0.2",
     "next": "10.0.5",
     "react": "17.0.1",
