--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "eslint": "7.18.0",
+    "next-redux-wrapper": "6.0.2",
     "prettier": "2.2.1",
-    "react-test-renderer": "17.0.1"
+    "react-helmet": "6.1.0",
+    "react-test-renderer": "17.0.1",
+    "styled-normalize": "8.0.7"
   }
 }
