--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "2.2.1",
     "react-helmet": "6.1.0",
     "react-test-renderer": "17.0.1",
+    "redux-devtools-extension": "2.13.8",
     "styled-normalize": "8.0.7"
   }
 }
