--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "1.5.0",
     "axios": "0.21.1",
     "cra-template-redux": "1.0.2",
+    "lodash": "4.17.20",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
