--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "7.2.2",
     "react-scripts": "4.0.1",
     "redux-saga": "1.1.3",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "test": "react-scripts test --env=jsdom",
