--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lint": "eslint --ignore-path .gitignore --ext .js .",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
     "format": "npm run prettier -- --write",
-    "validate": "npm run format && npm run lint"
+    "validate": "npm run format && npm run lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +50,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "eslint": "7.18.0",
+    "gh-pages": "^3.1.0",
     "next-redux-wrapper": "6.0.2",
     "prettier": "2.2.1",
     "react-helmet": "6.1.0",
