--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "4.0.1",
     "redux-saga": "1.1.3",
     "styled-components": "5.2.1",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "4.0.4"
   },
   "scripts": {
     "test": "react-scripts test --env=jsdom",
@@ -50,7 +50,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "eslint": "7.18.0",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "3.1.0",
     "next-redux-wrapper": "6.0.2",
     "prettier": "2.2.1",
     "react-helmet": "6.1.0",
