Mess with package.json deploy script

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "format": "npm run prettier -- --write",
     "validate": "npm run format && npm run lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d .next"
   },
   "eslintConfig": {
     "extends": "react-app"
